# Zenn

./: .gitignore  .textlintrc.json  CLAUDE.md  GLOSSARY.md  README.md  new.sh  newbook.sh  package-lock.json  package.json  preview.sh  prh.yml
articles/: 4e78c2484277cf.md  agentic-coding-for-numerics.md  build-hpx-hpc.md  build-qe-cmake.md  c-cpp-complex.md  claude-code-leaked-tool-call-stop-hook.md  claude-hook-deny-prohibited-codes.md  cli-option-schools.md  cpp-zero-div.md  current-status-of-julia-plot-Sep-2023.md  current-status-of-julia-plot-sep-2023.md  differential-test-framework.md  extended-dynamic-mode-decomposition-equivalents.md  formatter-for-agent-skills.md  fused-table-latex.md  harness-engineering-and-knowledge-management.md  how-to-use-argparse-jl.md  hpc-rsync-slurm-automation-cli.md  hphi-finite-temp-fulldiag.md  hphi-sqomega.md  hphi-time-evolution.md  ill-conditioning-harness-engineering.md  imaginary-time-evolution-and-steepest-descent.md  import-and-using-julia.md  intro-abelian-symmetric-tensor.md  intro-kak-decomposition.md  intro-matrix-manifold-optimization.md  intro-multivariable-complex-analysis.md  intro-to-lazygit.md  julia-identity-matrix.md  julia-metaprogramming-memory-leak.md  julia-performance-tips.md  julia-pkgtemplates-cli.md  keg-only-package-with-environment-modules.md  knowledge-system-allostasis.md  (+50 more)
programs/intro-kak-decomposition/: README.md  example.py  kak.py  pyproject.toml  test_kak.py  weyl_chamber.py
programs/intro-matrix-manifold-optimization/: README.md  descent.py  figures.py  pyproject.toml  test_descent.py
(+44 files in other folders)
