[project]
name = "intro-kak-decomposition"
version = "0.1.0"
description = "PoC implementation of KAK decomposition for 2-qubit gates"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
]
# Figure generation (Weyl-chamber GIF). Kept separate from the PoC core so
# `uv run pytest` does not pull in a plotting stack.
viz = [
    "matplotlib>=3.8",
    "pillow>=10.0",
]
